add media query for 1024px and add twitter share link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
           Next Quote
         </button>
-        <a href="#" class="share">
+        <a class="share">
           <svg class="twitter__icon">
             <use xlink:href="./img/SVG/sprite.svg#icon-twitter"></use>
           </svg>
@@ -45,9 +45,7 @@
         </svg>
         <div class="random__quote">
           <div class="quote">
-            <h3 class="text">
-              In quoting others, we cite ourselves
-            </h3>
+            <h3 class="text">In quoting others, we cite ourselves</h3>
           </div>
           <div class="quote__layout">
             <p id="authorName">Julio Cortazar</p>
